Fixed scrollbar and autosuggest

--- a/styles/components/dashboard.scss
+++ b/styles/components/dashboard.scss
@@ -9,6 +9,13 @@
 	left: 0;
 	top: 0;
 	overflow-y: scroll;
+	&::-webkit-scrollbar {
+		width: 4px;
+	}
+	&::-webkit-scrollbar-thumb {
+		background-color: darkgrey;
+		height: 56px;
+	}
 	&-hidden {
 		left: -300px;
 		top: 0;
